spacing fixed

--- a/api/static/_bracket_create.scss
+++ b/api/static/_bracket_create.scss
@@ -2,22 +2,24 @@ form, {
     text-align: center;
     width: 600px;
     margin: auto;
-    padding-top: 10em;
+    padding-top: 5em;
     font-size: 1.15em;
+    padding-right:1em;
 }
 
 p {
-  
+
 }
 
 h2 {
-    margin: 10px 0;
     font-size: 1.2em;
     font-weight: bold
 }
 
 
-
+.new_competitor {
+  padding-right: 2.65em;
+}
 
 #result {
     margin: 10px;
