--- a/api/static/_splash.scss
+++ b/api/static/_splash.scss
@@ -42,7 +42,7 @@
 
 /* This is the subheading that appears on the blue section */
 .splash-subhead {
-    color: $dark-gray;
+    color: $black;
     letter-spacing: 0.05em;
     opacity: 0.8;
 }
